path for jersey

--- a/new/FinalSearchEngine/.classpath
+++ b/new/FinalSearchEngine/.classpath
@@ -3,5 +3,63 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="jersey/aopalliance-repackaged-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="jersey/commons-cli-1.0.jar"/>
+	<classpathentry kind="lib" path="jersey/commons-logging-api-1.1.jar"/>
+	<classpathentry kind="lib" path="jersey/doxia-sink-api-1.0-alpha-7.jar"/>
+	<classpathentry kind="lib" path="jersey/exec-maven-plugin-1.2.1.jar"/>
+	<classpathentry kind="lib" path="jersey/google-collections-1.0.jar"/>
+	<classpathentry kind="lib" path="jersey/grizzly-framework-2.3.16.jar"/>
+	<classpathentry kind="lib" path="jersey/grizzly-http-2.3.16.jar"/>
+	<classpathentry kind="lib" path="jersey/grizzly-http-server-2.3.16.jar"/>
+	<classpathentry kind="lib" path="jersey/hamcrest-core-1.1.jar"/>
+	<classpathentry kind="lib" path="jersey/hk2-api-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="jersey/hk2-locator-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="jersey/hk2-utils-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="jersey/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="jersey/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="jersey/javax.inject-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="jersey/javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="jersey/jersey-client-2.12.jar"/>
+	<classpathentry kind="lib" path="jersey/jersey-common-2.12.jar"/>
+	<classpathentry kind="lib" path="jersey/jersey-container-grizzly2-http-2.12.jar"/>
+	<classpathentry kind="lib" path="jersey/jersey-guava-2.12.jar"/>
+	<classpathentry kind="lib" path="jersey/jersey-media-json-jettison-2.12.jar"/>
+	<classpathentry kind="lib" path="jersey/jersey-server-2.12.jar"/>
+	<classpathentry kind="lib" path="jersey/jettison-1.3.3.jar"/>
+	<classpathentry kind="lib" path="jersey/jsr305-2.0.1.jar"/>
+	<classpathentry kind="lib" path="jersey/junit-3.8.1.jar"/>
+	<classpathentry kind="lib" path="jersey/junit-3.8.2.jar"/>
+	<classpathentry kind="lib" path="jersey/junit-4.9.jar"/>
+	<classpathentry kind="lib" path="jersey/log4j-1.2.12.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-clean-plugin-2.5.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-compiler-plugin-2.5.1.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-compiler-plugin-3.1.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-deploy-plugin-2.7.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-filtering-1.1.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-install-plugin-2.4.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-jar-plugin-2.4.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-reporting-api-2.0.6.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-resources-plugin-2.6.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-shared-incremental-1.1.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-shared-utils-0.1.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-site-plugin-3.3.jar"/>
+	<classpathentry kind="lib" path="jersey/maven-surefire-plugin-2.12.4.jar"/>
+	<classpathentry kind="lib" path="jersey/osgi-resource-locator-1.0.1.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-build-api-0.0.4.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-compiler-api-1.9.1.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-compiler-api-2.2.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-compiler-javac-1.9.1.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-compiler-javac-2.2.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-compiler-manager-1.9.1.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-compiler-manager-2.2.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-component-annotations-1.5.5.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-interactivity-api-1.0-alpha-4.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-interpolation-1.13.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-utils-1.5.1.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-utils-2.0.5.jar"/>
+	<classpathentry kind="lib" path="jersey/plexus-utils-3.0.jar"/>
+	<classpathentry kind="lib" path="jersey/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="jersey/xbean-reflect-3.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
